server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gredfin-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.gredfin.brojonat.com
    secretName: gredfin-backend-tls
  rules:
  - host: "api.gredfin.brojonat.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gredfin-backend
            port:
              number: 80
